[gd_scene load_steps=6 format=3 uid="uid://bvpd01ej5e6e"]

[ext_resource type="Script" path="res://main.gd" id="1_648gp"]
[ext_resource type="Texture2D" uid="uid://uxe4g13uad0f" path="res://overlay.png" id="2_xpr7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1how4"]
bg_color = Color(1, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yl1xx"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1uihr"]

[node name="Main" type="Node"]
script = ExtResource("1_648gp")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemButtons" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 512.0
offset_top = 416.0
offset_right = 784.0
offset_bottom = 448.0
alignment = 2

[node name="AutoSaveTimer" type="Timer" parent="UI/SystemButtons"]
wait_time = 60.0
autostart = true

[node name="SaveButton" type="Button" parent="UI/SystemButtons"]
layout_mode = 2
text = "SAVE"

[node name="ClearLog" type="Button" parent="UI/SystemButtons"]
layout_mode = 2
text = "CLEAR LOG"

[node name="ResetButton" type="Button" parent="UI/SystemButtons"]
layout_mode = 2
text = "RESET"

[node name="DebugButton" type="Button" parent="UI/SystemButtons"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1how4")
text = "DEBUG"

[node name="ActionButtons" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 416.0
offset_right = 512.0
offset_bottom = 448.0

[node name="RedeployButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
text = "Redeploy"

[node name="ExploreButton" type="Button" parent="UI/ActionButtons"]
layout_mode = 2
text = "Explore"

[node name="SearchButton" type="Button" parent="UI/ActionButtons"]
visible = false
layout_mode = 2
text = "Search"

[node name="TransportButton" type="Button" parent="UI/ActionButtons"]
visible = false
layout_mode = 2
text = "Salvage"

[node name="ScanButton" type="Button" parent="UI/ActionButtons"]
visible = false
layout_mode = 2
text = "Scan"

[node name="SalvageButton" type="Button" parent="UI/ActionButtons"]
visible = false
layout_mode = 2
text = "Salvage"

[node name="EnergyBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = 134.0
offset_right = 208.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
rounded = true
show_percentage = false

[node name="EnergyLabel" type="Label" parent="UI/EnergyBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Energy:"

[node name="ResultPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -568.0
offset_top = -152.0
offset_right = 208.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/ResultPanel"]
layout_mode = 2
follow_focus = true

[node name="ResultLog" type="VBoxContainer" parent="UI/ResultPanel/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 256.0
grow_horizontal = 0

[node name="ResourcesContainer" type="VBoxContainer" parent="UI/ResourcesPanel"]
layout_mode = 2

[node name="ResourcesHeader" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_yl1xx")
text = "Resources"
horizontal_alignment = 1

[node name="ScrapMetalLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
layout_mode = 2
text = "Scrap Metal: 0"
horizontal_alignment = 1

[node name="EWasteLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
layout_mode = 2
text = "E-Waste: 0"
horizontal_alignment = 1

[node name="PlasticsLabel" type="Label" parent="UI/ResourcesPanel/ResourcesContainer"]
layout_mode = 2
text = "Plastics: 0"
horizontal_alignment = 1

[node name="TechPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -384.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0

[node name="TechContainer" type="VBoxContainer" parent="UI/TechPanel"]
layout_mode = 2

[node name="TechnologyHeader" type="Label" parent="UI/TechPanel/TechContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_yl1xx")
text = "Technology"
horizontal_alignment = 1

[node name="SSBatteriesButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "LI Batteries
1 Scrap Metal, 4 E-Waste"

[node name="PVPanelButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "PV Panel
2 E-Waste, 3 Plastics"

[node name="HDLensButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "HD Lens
1 Scrap Metal, 4 Plastics"

[node name="QTDeviceButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "QT Device
3 Scrap Metal, 2 Plastics"

[node name="HFSensorsButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "HF Sensors
2 Scrap Metal, 3 E-Waste"

[node name="HELaserButton" type="Button" parent="UI/TechPanel/TechContainer"]
visible = false
layout_mode = 2
text = "HE Laser
4 E-Waste, 1 Plastics"

[node name="CameraPanel" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 784.0
offset_bottom = 408.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_1uihr")

[node name="TextureRect" type="TextureRect" parent="UI/CameraPanel"]
layout_mode = 2
texture = ExtResource("2_xpr7u")

[connection signal="timeout" from="UI/SystemButtons/AutoSaveTimer" to="." method="save_game"]
[connection signal="pressed" from="UI/SystemButtons/SaveButton" to="." method="save_game"]
[connection signal="pressed" from="UI/SystemButtons/ClearLog" to="." method="clear_log"]
[connection signal="pressed" from="UI/SystemButtons/ResetButton" to="." method="reset_game"]
[connection signal="pressed" from="UI/ActionButtons/RedeployButton" to="." method="redeploy"]
[connection signal="pressed" from="UI/ActionButtons/ExploreButton" to="." method="explore"]
[connection signal="pressed" from="UI/ActionButtons/SearchButton" to="." method="search"]
[connection signal="pressed" from="UI/ActionButtons/TransportButton" to="." method="transport"]
[connection signal="pressed" from="UI/ActionButtons/ScanButton" to="." method="scan"]
[connection signal="pressed" from="UI/ActionButtons/SalvageButton" to="." method="salvage"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/SSBatteriesButton" to="." method="ss_batteries_install"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/PVPanelButton" to="." method="pv_panel_install"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/HDLensButton" to="." method="hd_lens_install"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/QTDeviceButton" to="." method="qt_device_install"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/HFSensorsButton" to="." method="hf_sensor_install"]
[connection signal="pressed" from="UI/TechPanel/TechContainer/HELaserButton" to="." method="he_laser_install"]
